<resources>
    <!--General-->
    <string name="app_name">SNews</string>
    <string name="error">ERROR</string>
    <string name="article_store_filename">articleData</string>

    <!--Bottom Navigation Menu-->
    <string name="home_menu">Home</string>
    <string name="discover_menu">Discover</string>
    <string name="games_menu">Games</string>
    <string name="search_menu">Search</string>
    <string name="profile_menu">Profile</string>

    <!--Notifications-->
    <string name="new_articles_fetched_notification_title">New articles have been fetched. Check them out!</string>
    <string name="new_">New </string>
    <string name="_articles_fetched_notification_title"> articles have been fetched. Check them out!</string>
    <string name="articles_available_from">Articles available from </string>
    <string name="and"> and </string>
    <string name="comma_space">, </string>
    <string name="and_more"> and more...</string>

    <!--Home Fragment-->


    <!--Article Fragment-->


    <!--Discover Fragment-->
    <string name="categories_header">Categories</string>
    <string name="business_category">Business</string>
    <string name="entertainment_category">Entertainment</string>
    <string name="general_category">General</string>
    <string name="health_category">Health</string>
    <string name="science_category">Science</string>
    <string name="sports_category">Sports</string>
    <string name="technology_category">Technology</string>
    <string name="publishers_header">Publishers</string>
    <string name="wired_publisher">Wired</string>
    <string name="tech_crunch_publisher">Tech Crunch</string>
    <string name="the_next_web_publisher">The Next Web</string>
    <string name="bbc_news_publisher">BBC News</string>
    <string name="mac_rumors_publisher">Mac Rumors</string>
    <string name="cnet_publisher">CNET</string>
    <string name="bleacher_report_publisher">Bleacher Report</string>
    <string name="bloomberg_publisher">Bloomberg</string>
    <string name="business_insider_publisher">Business Insider</string>
    <string name="buzzfeed_publisher">Buzzfeed</string>
    <string name="cnn_publisher">CNN</string>
    <string name="espn_publisher">ESPN</string>
    <string name="financial_post_publisher">Financial Post</string>
    <string name="fox_news_publisher">Fox News</string>

    <!--Games Fragment-->
    <string name="view_article_button">View Article</string>
    <string name="next_question_button">Next Question</string>
    <string name="guess_fact">Guess The Fact</string>
    <string name="guess_the_title">Guess The Title</string>
    <string name="a">A.</string>
    <string name="b">B.</string>
    <string name="c">C.</string>
    <string name="d">D.</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="status">Guess the article title from the image!</string>

    <!--Search Fragment-->


    <!--Profile Fragment-->
    <string name="sign_in_or_register_instruction">Sign in or Register</string>
    <string name="sign_in_register">Sign In / Register</string>
    <string name="sign_out">Sign Out</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="apply_tags">Apply Tags</string>
    <string name="spotlight_filtering_header">Spotlight</string>
    <string name="spotlight_filtering_description">Articles containing these words in the title will be pushed to the top of the news feed. Words can also be toggled off and on.</string>
    <string name="spotlight_hint">Enter word</string>
    <string name="spotlight_chip_already_exists_message">Word already in spotlight list!</string>
    <string name="remove_chip_from_spotlight_group_first">Remove word from spotlight group first!</string>
    <string name="invalid_chip_word">Invalid word! Please try a different word.</string>
    <string name="hide_filtering_header">Hide</string>
    <string name="hide_filtering_description">Articles containing these words in the title will be hidden from the news feed. Words can also be toggled off and on.</string>
    <string name="hide_hint">Enter word</string>
    <string name="hide_chip_already_exists_message">Word already in hide list!</string>
    <string name="remove_chip_from_hide_group_first">Remove word from hide group first!</string>
    <string name="add">Add</string>
    <string name="article_fetching_preferences_header">Article fetching</string>
    <string name="article_fetching_preferences_description">Customise when new articles are fetched.</string>
    <string name="remove_all">Remove All</string>
    <string name="notification_preferences_header">Notifications</string>
    <string name="notification_preferences_description">Select the categories that you wish to receive notifications for.</string>
    <string name="offline_mode_preferences_header">Offline Mode</string>
    <string name="offline_mode_preferences_description">Customise preferences for app performance when an active internet connection cannot be achieved.</string>
    <string name="password_does_not_match">Password does not match! Please enter a valid password.</string>
    <string name="email_does_not_match">Email does not match! Please enter a valid email address.</string>
    <string name="invalid_last_name">Please enter a valid last name.</string>
    <string name="invalid_first_name">Please enter a valid first name.</string>

    <!--Sign In Register Fragment-->
    <string name="sign_in">Sign In</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_email_hint">Confirm Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">Register</string>
    <string name="please_retry">Please retry!</string>

    <!--Dummy News Data-->
    <!--Dummy Article Titles-->
    <string name="dummy_title_one">Intel acquires SigOpt, a specialist in modeling optimization, to boost its AI business</string>
    <string name="dummy_title_two">U.S. Stocks Edge Up Ahead of Tech Earnings</string>
    <string name="dummy_title_three">Three stabbed to death in France terror attack</string>
    <string name="dummy_title_four">Heathrow no longer Europes busiest airport as boss blames coronavirus testing failure</string>

    <!--Dummy Article Descriptions-->
    <string name="dummy_description_one">Intel has been doubling down on building chips and related architecture for the next generation of computing, and today it announced an acquisition that will bolster its expertise and work specifically in one area of future technology: artificial intelligence…</string>
    <string name="dummy_description_two">Investors await guidance from tech giants including Apple, Amazon, Facebook and Alphabet</string>
    <string name="dummy_description_three">President Macron says france will not give up its values after the attack at the Notre-Dame basilica</string>
    <string name="dummy_description_four">The COVID-19 pandemic continues to crush demand for flying and Heathrow says it is falling behind airports with passenger testing.</string>

    <!--Dummy Article Categories-->
    <string name="dummy_category_one">Technology</string>
    <string name="dummy_category_two">Stocks</string>
    <string name="dummy_category_three">Terror</string>
    <string name="dummy_category_four">Travel</string>

    <!--Dummy News Providers-->
    <string name="dummy_provider_one">TechCrunch</string>
    <string name="dummy_provider_two">The Wall Street Journal</string>
    <string name="dummy_provider_three">BBC News</string>
    <string name="dummy_provider_four">Sky News</string>

    <!--Dummy Date Times-->
    <string name="dummy_datetime_one">21:00 20 October 2020</string>
    <string name="dummy_datetime_two">22:00 21 October 2020</string>
    <string name="dummy_datetime_three">23:00 22 October 2020</string>
    <string name="dummy_datetime_four">00:00 23 October 2020</string>

    <!--Dummy Values Games Screen-->
    <string name="dummy_question">Ford is approaching _______ reservations for its long-awaited Bronco SUV, which is expected to arrive in U.S. dealerships next spring.</string>

    <string name="dummy_answer_a">100,000</string>
    <string name="dummy_answer_b">190,000</string>
    <string name="dummy_answer_c">250,000</string>
    <string name="dummy_answer_d">50,000</string>
</resources>