<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_house"
        android:title="@string/home_menu"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/discover"
        android:enabled="true"
        android:icon="@drawable/ic_server"
        android:title="@string/discover_menu"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/games"
        android:enabled="true"
        android:icon="@drawable/ic_game_console"
        android:title="@string/games_menu"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_magnifying_glass"
        android:title="@string/search_menu"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_avatar"
        android:title="@string/profile_menu"
        app:showAsAction="ifRoom"></item>
</menu>