<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInRegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/backgroundGreyMedium"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/sign_in"
                            android:theme="@style/HeaderText" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/signInErrorText"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:gravity="right|center_vertical"
                            android:layout_weight="1"
                            android:theme="@style/ErrorText"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/signInEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/signInPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signInButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sign_in"
                        android:theme="@style/AppTheme.Button.Dark" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardBackgroundColor="@color/backgroundGreyMedium"
                app:cardCornerRadius="10dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/register"
                            android:theme="@style/HeaderText" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/registerErrorText"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:gravity="right|center_vertical"
                            android:layout_weight="1"
                            android:theme="@style/ErrorText"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/first_name_hint"
                        android:inputType="textPersonName|text"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerLastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/last_name_hint"
                        android:inputType="textPersonName"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerConfirmEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_email_hint"
                        android:inputType="textEmailAddress"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_password_hint"
                        android:inputType="textPassword"
                        android:theme="@style/AppTheme.EditText"
                        android:textColor="@color/text" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/register"
                        android:theme="@style/AppTheme.Button.Dark" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>